# inkscape-scripting

./: README.md  inkscape_scripting.inx  setup.cfg  setup.py
inkscape_scripting/: __init__.py  client.py  constants.py  daemon.py  interact.py  interact_libxdo.py  interact_xdotool.py  ipython.py  ipython_export.py  object_repr.py  server.py  shell.py
