[metadata]
name = inkscape_scripting
version = 0.0.0
author = user202729
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/user202729/inkscape-scripting
	Issue Tracker = https://github.com/user202729/inkscape-scripting/issues

[options]
include_package_data = True
python_requires = >=3.7
install_requires =
	ipython>=8.18.1
	python-libxdo>=0.1.2a1
zip_safe = True
packages =
	inkscape_scripting

[options.entry_points]
console_scripts =
	inkscape_scripting_daemon = inkscape_scripting.ipython:main
	inkscape_scripting_client = inkscape_scripting.client:main


